[package]
name = "cache-rs"
author = "Zhenwei Jia"
description = "A simple cache library for Rust"
license = "MIT"
version = "0.1.0"
edition = "2021"


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]


[lib]
name = "cache_rs"
path = "src/lib.rs"
